// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CITrialHomePage snapshot test should call button event when click 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main"
    style="margin: 80px; background: transparent url(test-file-stub) no-repeat; position: relative; background-size: auto; background-position-y: center; height: calc(100% - 160px);"
  >
    <div
      class="Layout--vertical Layout--layout-spacing-medium StyledProps--main"
    >
      <div
        class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
        style="align-items: center;"
      >
        <h1
          class="StyledProps--font StyledProps--font-h1 StyledProps--main StyledProps--font-weight-bold StyledProps--color StyledProps--color-black100"
          style="font-size: 30px;"
        >
          ci.continuous
        </h1>
      </div>
      <div
        class="Layout--vertical Layout--layout-spacing-small StyledProps--main"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--padding-bottom-xxlarge"
          style="width: 500px; line-height: 2;"
        >
          ci.ciTrialHomePage.startTrial.description
        </p>
        <a
          href="https://ngdocs.harness.io/category/zgffarnh1m-ci-category"
          rel="noreferrer"
          target="_blank"
        >
          ci.learnMore
        </a>
        <div
          class="Layout--horizontal Layout--layout-spacing-large StyledProps--main"
          style="align-items: center;"
        >
          <button
            class="bp3-button bp3-disabled bp3-loading StyledProps--font Button--button Button--with-current-color StyledProps--main StyledProps--intent-primary"
            disabled=""
            style="width: 300px; height: 45px;"
            tabindex="-1"
            type="button"
          >
            <div
              class="bp3-spinner bp3-button-spinner"
            >
              <div
                class="bp3-spinner-animation"
              >
                <svg
                  height="20"
                  stroke-width="16.00"
                  viewBox="-3.00 -3.00 106.00 106.00"
                  width="20"
                >
                  <path
                    class="bp3-spinner-track"
                    d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
                  />
                  <path
                    class="bp3-spinner-head"
                    d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
                    pathLength="280"
                    stroke-dasharray="280 280"
                    stroke-dashoffset="210"
                  />
                </svg>
              </div>
            </div>
            <span
              class="bp3-button-text"
            >
              ci.ciTrialHomePage.startTrial.startBtn.description
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CITrialHomePage snapshot test should call button event when click 2`] = `
<div>
  <div>
    <h1>
      Not Found
    </h1>
    <div
      data-testid="location"
    >
      /account/undefined/ci/home?trial=true
    </div>
  </div>
</div>
`;

exports[`CITrialHomePage snapshot test should render properly 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main"
    style="margin: 80px; background: transparent url(test-file-stub) no-repeat; position: relative; background-size: auto; background-position-y: center; height: calc(100% - 160px);"
  >
    <div
      class="Layout--vertical Layout--layout-spacing-medium StyledProps--main"
    >
      <div
        class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
        style="align-items: center;"
      >
        <h1
          class="StyledProps--font StyledProps--font-h1 StyledProps--main StyledProps--font-weight-bold StyledProps--color StyledProps--color-black100"
          style="font-size: 30px;"
        >
          ci.continuous
        </h1>
      </div>
      <div
        class="Layout--vertical Layout--layout-spacing-small StyledProps--main"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--padding-bottom-xxlarge"
          style="width: 500px; line-height: 2;"
        >
          ci.ciTrialHomePage.startTrial.description
        </p>
        <a
          href="https://ngdocs.harness.io/category/zgffarnh1m-ci-category"
          rel="noreferrer"
          target="_blank"
        >
          ci.learnMore
        </a>
        <div
          class="Layout--horizontal Layout--layout-spacing-large StyledProps--main"
          style="align-items: center;"
        >
          <button
            class="bp3-button StyledProps--font Button--button Button--with-current-color StyledProps--main StyledProps--intent-primary"
            style="width: 300px; height: 45px;"
            type="button"
          >
            <span
              class="bp3-button-text"
            >
              ci.ciTrialHomePage.startTrial.startBtn.description
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
